updated the layout

--- a/Algorithm/03.Analyzing-Perfoemance-of-Arrays-and-Objects.md
+++ b/Algorithm/03.Analyzing-Perfoemance-of-Arrays-and-Objects.md
@@ -1,13 +1,13 @@
 # Arrays Performance Speed
 
-## Big O of Arrays
+### Big O of Arrays
 
-In sertion - <b>It depends...</b>
-Removal - <b>It depends...</b>
-Searching - <b>O(N)</b>
+In sertion - <b>It depends...</b>  
+Removal - <b>It depends...</b>  
+Searching - <b>O(N)</b>  
 Access - <b>O(1)</b>
 
-#### Big O of Array Operations
+### Big O of Array Operations
 
 - push - <b>O(1) (Access)</b>
 - pop - <b>O(1) (Access)</b>
