--- a/Algorithm/09.Divide-and-Conquer-Pattern.md
+++ b/Algorithm/09.Divide-and-Conquer-Pattern.md
@@ -12,6 +12,7 @@ Given a **sorted** array of integers, write a function called search, that accep
 search([1, 2, 3, 4, 5, 6], 4); // 3
 search([1, 2, 3, 4, 5, 6], 6); // 5
 search([1, 2, 3, 4, 5, 6], 11); // -1
+search([1, 2, 3, 4, 5, 6, 7], 5); //4
 ```
 
 ### A naive solution
@@ -29,3 +30,55 @@ function search(arr, val) {
 
 Linear Search  
 **Time Complexity O(N)**
+
+### Refactor
+
+```javascript
+function search(array, val) {
+  let min = 0;
+  let max = array.length - 1;
+
+  while (min <= max) {
+    let middle = Math.floor((min + max) / 2);
+    let currentElement = array[middle];
+
+    if (array[middle] < val) {
+      min = middle + 1;
+    } else if (array[middle] > val) {
+      max = middle - 1;
+    } else {
+      return middle;
+    }
+  }
+
+  return -1;
+}
+```
+
+**Time Complexity - Log(N) - Binary Search!**
+
+## Refactor
+
+```javascript
+function search(array, val) {
+  let min = 0;
+  let max = array.length - 1;
+
+  while (min <= max) {
+    let middle = Math.floor((min + max) / 2);
+    let currentElement = array[middle];
+
+    if (array[middle] < val) {
+      min = middle + 1;
+    } else if (array[middle] > val) {
+      max = middle - 1;
+    } else {
+      return middle;
+    }
+  }
+
+  return -1;
+}
+```
+
+**Time Complexity - Log(N) - Binary Search!**
