--- a/Algorithm/Problem-SolvingーPatterns/09.Divide-and-Conquer-Pattern.md
+++ b/Algorithm/Problem-SolvingーPatterns/09.Divide-and-Conquer-Pattern.md
@@ -1,10 +1,10 @@
-#Divide and Conquer
+## Divide and Conquer
 
 This pattern involves dividing a data set into smaller chunks and then repeating a process with a subset of data.
 
 This pattern can tremendously **decrease time complexity**
 
-##An Example
+## An Example
 
 Given a **sorted** array of integers, write a function called search, that accepts a value and returns the index where the value passed to the function is located. If the value is not found, return -1
 
